objects/ssot__ProductCategory__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActiveFromDate__c</fullName>
        <label>Active From Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActiveToDate__c</fullName>
        <label>Active To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Product Category Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsNavigational__c</fullName>
        <label>Is Navigational</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Category Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentCategoryId__c</fullName>
        <label>Parent Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentCategory__c</fullName>
        <label>Parent Category</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductCatalogId__c</fullName>
        <label>Product Catalog</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductCategoryAttributeSets__c</fullName>
        <label>ProductCategoryAttributeSets</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductCategoryTranslations__c</fullName>
        <label>ProductCategoryTranslations relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761194168_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductCatalog_Id_map_ProductCategor_rel</label>
        <referenceTo>ssot__ProductCatalog__dlm</referenceTo>
        <relationshipLabel>ProductCatalog_Id_map_ProductCategor_rel</relationshipLabel>
        <relationshipName>rel_1697761194168_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761194779_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductCategory_Id_map_ProductCatego_rel</label>
        <referenceTo>ssot__ProductCategory__dlm</referenceTo>
        <relationshipLabel>ProductCategory_Id_map_ProductCatego_rel</relationshipLabel>
        <relationshipName>rel_1697761194779_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761194845_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductCategory_ParentCategoryId_map_rel</label>
        <referenceTo>ssot__ProductCategory__dlm</referenceTo>
        <relationshipLabel>ProductCategory_ParentCategoryId_map_rel</relationshipLabel>
        <relationshipName>rel_1697761194845_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>